# wenyan-reader

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/: hooks.json
.cursor/skills/: brainstorming  dispatching-parallel-agents  executing-plans  finishing-a-development-branch  receiving-code-review  requesting-code-review  subagent-driven-development  systematic-debugging  test-driven-development  using-git-worktrees  using-superpowers  verification-before-completion  writing-plans  writing-skills
architecture/: app-ux.md  cli-spec.md  coding-style.md  storage-format.md
architecture/preprocessing/: README.md  editor-workflow.md  intermediate-artifacts.md  job-execution.md  model-strategy.md  operation-scope.md  pipeline-stages.md  review-and-quality-jobs.md  source-grounding.md
architecture/tech-stack/: README.md  cli.md  webapp.md
config/: preprocessing.yaml
prompts/: chapter-structure-v1.md  paragraph-segmentation-v1.md  paragraph-segmentation.md  paragraph-structure-v1.md  paragraph-structure.md  review-paragraph-assembly.md  segment-context-review.md  segment-context.md  segment-gloss-review-v1.md  segment-gloss-review.md  segment-gloss-v1.md  segment-gloss.md  segment-grammar-review.md  segment-grammar.md  segment-tokenization-review-v1.md  segment-tokenization-review.md  segment-tokenization-v1.md  segment-tokenization.md
sources/: registry.yaml
src/wenyan/: bootstrap.py
tests/: conftest.py  test_smoke.py
tests/cli/: test_assemble_paragraph_cli.py  test_show_output.py  test_status_output.py  test_unit_refs.py
(+267 files in other folders)
