[project]
name = "wenyan"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "wenyan-models",
  "typer>=0.15.0",
  "rich>=13.9.0",
  "httpx>=0.28.0",
  "pyyaml>=6.0.2",
]

[project.scripts]
wenyan = "wenyan.cli:app"

[tool.uv.sources]
wenyan-models = { workspace = true }

[tool.uv.workspace]
members = ["packages/wenyan-models"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wenyan"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = ["pytest>=8.3.0", "ruff>=0.8.0", "mypy>=1.14.0"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["wenyan", "wenyan_models"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
